--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -3,12 +3,12 @@
 }
 
 #activity{
-    height:136px;
+    /*height:136px;*/
     background-color:  indianred;
 }
 
 .topImg{
-    width:33.33%;
-    float:left;
+    /*width:33.33%;
+    float:left;*/
         
 }
