--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -25,11 +25,11 @@
 /* Font-face Icons */
 @font-face {
 	font-family: 'flexslider-icon';
-	src:url('fonts/flexslider-icon.eot');
-	src:url('fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'),
-		url('fonts/flexslider-icon.woff') format('woff'),
-		url('fonts/flexslider-icon.ttf') format('truetype'),
-		url('fonts/flexslider-icon.svg#flexslider-icon') format('svg');
+	src:url('../themes/fonts/flexslider-fonts/flexslider-icon.eot');
+	src:url('../themes/fonts/flexslider-fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'),
+		url('../themes/fonts/flexslider-fonts/flexslider-icon.woff') format('woff'),
+		url('../themes/fonts/flexslider-fonts/flexslider-icon.ttf') format('truetype'),
+		url('../themes/fonts/flexslider-fonts/flexslider-icon.svg#flexslider-icon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -38,7 +38,7 @@
 *********************************/
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block;}
+.flexslider .slides img {width: 50%; height: 50%; margin-left: auto; margin-right: auto; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
@@ -94,3 +94,15 @@ html[xmlns] .slides {display: block;}
   .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
   .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
 }
+
+/*
+@media only screen and (min-width: 959px) {
+    .img {
+        max-width: 50%;
+        max-height: 50%;
+        display: block;
+        margin-left: auto;
+                margin-right: auto;
+    }
+}
+*/
