--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -95,14 +95,28 @@ html[xmlns] .slides {display: block;}
   .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
 }
 
-/*
-@media only screen and (min-width: 959px) {
-    .img {
-        max-width: 50%;
-        max-height: 50%;
-        display: block;
-        margin-left: auto;
-                margin-right: auto;
-    }
+.flex-caption {
+    position:center;
+    left:50;right:50;bottom:0;
+    background:rgba(0,0,0,0.6);
+    z-index:1;padding:10px;
+    -webkit-animation: slideIn; 
+    -moz-animation: slideIn; 
+    -o-animation: slideIn; 
+    animation: slideIn; 
+    -webkit-animation-duration: 2s; 
+    -moz-animation-duration: 2s; 
+    -o-animation-duration: 2s; 
+    animation-duration: 2s;
+    text-shadow:0px 0px #ffffff;
+    color: #ffffff;
 }
-*/
+@-webkit-keyframes slideIn { 0% { left: 9%; opacity: 0; }
+100% { left: 0; opacity: 1; } }
+@-moz-keyframes slideIn { 0% { left: 9%; opacity: 0; }
+100% { left: 0; opacity: 1; } }
+@-o-keyframes slideIn { 0% { left: 9%; opacity: 0; }
+100% { left: 0; opacity: 1; } }
+@keyframes slideIn { 0% { left: 9%; opacity: 0; }
+100% { left: 0; opacity: 1; } }
+ }
