--- a/css/tinycarousel.css
+++ b/css/tinycarousel.css
@@ -1,7 +1,7 @@
 /* Tiny Carousel */
-#slider1 { height: 1%; margin: 30px 0 0; overflow:hidden; position: relative; padding: 0 50px 10px;   }
-#slider1 .viewport { height: 125px; overflow: hidden; position: relative; }
-#slider1 .buttons {
+#slider1 { height: 1%; width:100%; overflow-x:scroll; position: relative;   }
+#slider1 .viewport { height: 75px; width:1200%; position: relative; }
+/*#slider1 .buttons {
     background: #C01313;
     border-radius: 35px;
     display: block;
@@ -25,7 +25,7 @@
 #slider1 .buttons:hover{
     color: #C01313;
     background: #fff;
-}
+}*/
 #slider1 .disable { visibility: hidden; }
-#slider1 .overview { list-style: none; position: absolute; padding: 0; margin: 0; width: 240px; left: 0 top: 0; }
-#slider1 .overview li{ float: left; margin: 0 20px 0 0; padding: 1px; height: 121px; border: 1px solid #dcdcdc; width: 236px;}
+#slider1 .overview { list-style: none; position: absolute; padding: 0; margin: 0; left: 0 ;top: 0; }
+#slider1 .overview li{ float: left; margin: 0 20px 0 0; padding: 1px; }
