--- a/css/register.css
+++ b/css/register.css
@@ -11,14 +11,14 @@
 	color: #ffffff;
 	text-shadow: none;
 	font-weight: bold;
-	font-size: 13px;
+	font-size: 15px;
 }
 
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 0.8%;
-    font-size: 14px;
+    margin-bottom: 0.5%;
+    font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
 }
@@ -179,7 +179,7 @@ h4 {
 	color: #ffffff;
 }
 
-.regconfirmBtn {
+.submitRegistrationButton {
 
 	-moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
@@ -214,10 +214,10 @@ h4 {
 
 }
 
-.findpplBtn:hover, .registerBtn:hover, .signinBtn:hover, .regconfirmBtn:hover {
+.findpplBtn:hover, .registerBtn:hover, .signinBtn:hover, .submitRegistrationButton:hover {
 	background-color:#d33021;
 }
-.findpplBtn:active, .registerBtn:active, .signinBtn:active, .regconfirmBtn:active {
+.findpplBtn:active, .registerBtn:active, .signinBtn:active, .submitRegistrationButton:active {
 	position:relative;
 	top:1px;
 }
@@ -240,6 +240,10 @@ h4 {
 [data-role="listview"] .place li a:hover {
 	background-color: #88ccc1;
 	color: #ffffff;
+}
+
+div[role="main"] input {
+height: 50px;
 }
 
 /* End of CSS document */
