UI fixes in mood, register and login pages

--- a/css/register.css
+++ b/css/register.css
@@ -179,7 +179,7 @@ h4 {
 	color: #ffffff;
 }
 
-.submitRegistrationButton {
+.findpplBtn {
 
 	-moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
