--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -7,6 +7,7 @@
 *@version 0.1 (2014/09/07)
 */
 
+
 .ui-content {
     padding: 0px !important;
 }
@@ -190,6 +191,92 @@ h4 {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+
+}
+
+.ui-bar, .ui-body {
+    padding:0em;
+    display: inline;
+    text-align: center;
+
+}
+
+.ui-block-a, .ui-block-b, .ui-block-c {
+    padding:0em;
+    display: inline;
+    text-align: center;
+
+}
+
+.preferredLocation {
+    float: left;
+    margin-left: 10px;
+    color: #ffffff;
+
+}
+.preferredActivity {
+    float: right;
+    margin-right: 10px;
+    color: #ffffff;
+}
+
+.preferredLocation1 {
+    float: left;
+    margin-left: 10px;
+    color: #b42723;
+
+}
+.preferredActivity1 {
+    float: right;
+    margin-right: 10px;
+    color: #b42723;
+}
+
+.confirminvitesButton {
+    margin-left: 10px;
+    margin-top: 40px;
+    -moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
+    box-shadow:inset 0px 1px 0px 0px #c62d1f;
+    background-color:#c62d1f;
+    -webkit-border-top-left-radius:6px;
+    -moz-border-radius-topleft:6px;
+    border-top-left-radius:6px;
+    -webkit-border-top-right-radius:6px;
+    -moz-border-radius-topright:6px;
+    border-top-right-radius:6px;
+    -webkit-border-bottom-right-radius:6px;
+    -moz-border-radius-bottomright:6px;
+    border-bottom-right-radius:6px;
+    -webkit-border-bottom-left-radius:6px;
+    -moz-border-radius-bottomleft:6px;
+    border-bottom-left-radius:6px;
+    text-indent:0px;
+    border:1px solid #d02718;
+    display:inline-block;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    font-style:normal;
+    height:40px;
+    line-height:40px;
+    width:180px;
+    text-decoration:none;
+    text-align:center;
+    text-shadow:1px 1px 0px #810e05;
+    color: #ffffff;
+}
+
+ .inviteBtn:hover {
+    background-color:#d33021;
+}
+.inviteBtn:active {
+    position:relative;
+    top:1px;
+}
+
+.ui-block-a {
+    padding:0;
 }
 
 /* End of CSS document */
