--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -7,9 +7,7 @@
 *@version 0.1 (2014/09/07)
 */
 
-.ui-content {
-    padding: 0px !important;
-}
+
 
 
 [data-role= "header"] h3{
@@ -119,6 +117,17 @@ h4 {
     -webkit-box-shadow: none;
 }
 
+.ui-icon-logouticon:after {
+	background-image: url("../images/logouticon.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 /* style for the action buttons */
 
