UI updates- confirmInvitations, findyourpeople and other fixes

--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -120,6 +120,17 @@ h4 {
     -webkit-box-shadow: none;
 }
 
+.ui-icon-logouticon:after {
+    background-image: url("../images/logouticon.png");
+    background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 
 
