--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -278,10 +278,10 @@ h4 {
     color: #ffffff;
 }
 
- .inviteBtn:hover {
+ .confirminvitesButton:hover {
     background-color:#d33021;
 }
-.inviteBtn:active {
+.confirminvitesButton:active {
     position:relative;
     top:1px;
 }
@@ -299,5 +299,12 @@ h4 {
     right: 0;
 }
 #confirmprofileImg:hover .close { display: block; }
+
+.actpic {
+    height:100px;
+    width:100px;
+}
+
+
 
 /* End of CSS document */
