--- a/css/findYourPeople.css
+++ b/css/findYourPeople.css
@@ -189,12 +189,14 @@ h4 {
     float: left;
     margin-left: 10px;
     color: #ffffff;
+    font-size: 14px;
 
 }
 .preferredActivity {
     float: right;
     margin-right: 10px;
     color: #ffffff;
+    font-size: 14px;
 }
 
 .userprofilePic img {
@@ -216,6 +218,10 @@ h4 {
     background-size: cover;
     background-position: center;
 
+}
+
+.ui-bar-a {
+    font-size: 17px;
 }
 
 
