--- a/css/login.css
+++ b/css/login.css
@@ -22,7 +22,7 @@
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 0.5%;
+    margin-bottom: 4%;
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
@@ -30,7 +30,7 @@
 
 
 #header {
-	background: #b42723 !important;
+	background: #cc0000 !important;
 }
 
 
@@ -42,7 +42,7 @@
 }
 
 h4 {
-	color: #b42723;
+	color: #cc0000;
 }
 
 /* style for the custom icons */
