--- a/css/register.css
+++ b/css/register.css
@@ -26,7 +26,7 @@
 
 
 #header {
-	background: #b42723 !important;
+	background: #cc0000 !important;
 }
 
 .ui-icon-mygear:after {
@@ -122,7 +122,7 @@
 }
 
 h4 {
-	color: #b42723;
+	color: #cc0000;
 }
 
 .findpplBtn {
@@ -230,13 +230,14 @@ height: 50px;
 
 /* un-checked */
 .ui-checkbox label.ui-checkbox-off {
-  background: #333333 !important;
+  background: #999999 !important;
 }
 
 /* checked */
 .ui-checkbox label.ui-checkbox-on {
-  background: #b42723 !important;
+  background: #cc0000 !important;
 }
+
 
 
 /* End of CSS document */
