--- a/css/login.css
+++ b/css/login.css
@@ -22,10 +22,13 @@
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 4%;
+    margin-bottom: 2%;
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
+    font-family: PT Sans Narrow;
+   
+
 }
 
 
