--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -7,9 +7,6 @@
 *@version 0.1 (2014/09/07)
 */
 
-
-
-
 [data-role= "header"] h3{
 	color: #ffffff;
 	text-shadow: none;
@@ -20,10 +17,11 @@
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 0.5%;
-    font-size: 15px;
+    margin-bottom: 2%;
+    font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
+    font-family: PT Sans Narrow;
 }
 
 
