--- a/css/myTables.css
+++ b/css/myTables.css
@@ -22,10 +22,12 @@
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 0.5%;
+    margin-bottom: 2%;
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
+    font-family: PT Sans Narrow;
+    
 }
 
 
