--- a/css/register.css
+++ b/css/register.css
@@ -13,15 +13,17 @@
 	text-shadow: none;
 	font-weight: bold;
 	font-size: 15px;
+        font-family: PT Sans Narrow;
 }
 
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 0.5%;
+    margin-bottom: 2%;
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
+    font-family: PT Sans Narrow;
 }
 
 
