--- a/css/login.css
+++ b/css/login.css
@@ -157,8 +157,8 @@ h4 {
 	text-indent:0px;
 	border:1px solid #d02718;
 	display:inline-block;
-	font-family:Arial;
-	font-size:15px;
+	font-family: PT Sans Narrow;
+	font-size:17px;
 	font-weight:bold;
 	font-style:normal;
 	height:40px;
@@ -191,8 +191,8 @@ h4 {
 	text-indent:0px;
 	border:1px solid #d02718;
 	display:inline-block;
-	font-family:Arial;
-	font-size:15px;
+	font-family: PT Sans Narrow;
+	font-size:17px;
 	font-weight:bold;
 	font-style:normal;
 	height:40px;
@@ -225,8 +225,8 @@ h4 {
 	text-indent:0px;
 	border:1px solid #d02718;
 	display:inline-block;
-	font-family:Arial;
-	font-size:15px;
+	font-family: PT Sans Narrow;
+	font-size:17px;
 	font-weight:bold;
 	font-style:normal;
 	height:40px;
@@ -278,6 +278,7 @@ h4 {
 	color: #b42723;
 	text-align: center;
 	margin-top: 10px;
+        font-family: PT Sans Narrow;
 }
 
 #forgotPwdButton:hover {
