--- a/css/register.css
+++ b/css/register.css
@@ -147,7 +147,7 @@ h4 {
 	text-indent:0px;
 	border:1px solid #d02718;
 	display:inline-block;
-	font-family:Arial;
+	 font-family: PT Sans Narrow;
 	font-size:13px;
 	font-weight:bold;
 	font-style:normal;
@@ -184,7 +184,7 @@ h4 {
 	text-indent:0px;
 	border:1px solid #d02718;
 	display:inline-block;
-	font-family:Arial;
+	 font-family: PT Sans Narrow;
 	font-size:15px;
 	font-weight:bold;
 	font-style:normal;
@@ -215,16 +215,6 @@ h4 {
 	padding-left: 15px;
 }
 
-/* style for the dropdown filter items */
-[data-role="listview"] .time li a:hover {
-	background-color: #ffbb00;
-	color: #ffffff;
-}
-
-[data-role="listview"] .place li a:hover {
-	background-color: #88ccc1;
-	color: #ffffff;
-}
 
 div[role="main"] input {
 height: 50px;
