--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -265,6 +265,10 @@ h4 {
     font-family: PT Sans Narrow;
 }
 
+.coffee, .drinks, .dine {
+    height:65px;
+    width:50px;
+}
 
 
 /* End of CSS document */
