--- a/css/moodipad.css
+++ b/css/moodipad.css
@@ -124,3 +124,8 @@
 	 font-size: 20px;
          font-family: PT Sans Narrow;
 }
+
+.coffee, .drinks,.dine {
+    height:260px;
+    width:200px;
+}
