--- a/css/login.css
+++ b/css/login.css
@@ -289,4 +289,8 @@ div[role="main"] input {
 height: 50px;
 }
 
+#myTable, #invites, #login,#logout {
+    background-color: #fff;
+}
+
 /* End of CSS document */
