UI changes for cross device-confirmInvite page

--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -356,4 +356,10 @@ div#tags label{
     background-color: #fff;
 }
 
+#userTop {
+    height:20px;
+    font-size: 13px;
+}
+
+
 /* End of CSS document */
