--- a/css/confirmInvitationsipad.css
+++ b/css/confirmInvitationsipad.css
@@ -56,9 +56,9 @@
     font-size:24px;
     font-weight:bold;
     font-style:normal;
-    height:50px;
-    line-height:50px;
-    width:240px;
+    height:70px;
+    line-height:70px;
+    width:400px;
     text-decoration:none;
     text-align:center;
     text-shadow:1px 1px 0px #810e05;
@@ -90,6 +90,7 @@ fieldset label {
 
 .ui-input-text {
 	height: 50px;
+        
 }
 
 .ui-grid-b {
@@ -109,13 +110,56 @@ div#tags label{
     width:260px;
 }
 
-#confirmprofileImg { position: relative; }
+label .ui-btn #tags {
+    font-size: 20px;
+}
+
+#confirmprofileImg { 
+    position: relative;
+}
+
 #confirmprofileImg .close { 
-     
     position: absolute;
     top: -320px;
     right: 25px;
     height:36px;
     width:36px;
 }
-#confirmprofileImg:hover .close { display: block; }
+
+#confirmprofileImg:hover .close {
+    display: block;
+}
+
+
+#userTop {
+    height:40px;
+    font-size: 20px;
+}
+
+.timedate,  .confirmdate, #dateString {
+    font-size: 24px;
+}
+
+.ui-input-text #address {
+    font-size: 24px;
+    
+}
+
+.ui-input-text #basicExample {
+    font-size: 24px;
+    width:200px;
+}
+
+.ui-checkbox label.ui-checkbox-off {
+    font-size: 25px;
+    text-shadow: none;
+    width:200px;
+    font-family: PT Sans Narrow;
+}
+
+.ui-checkbox label.ui-checkbox-on {
+    font-size: 25px;
+    width:200px;
+    text-shadow: none;
+    font-family: PT Sans Narrow;
+}
