--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -136,7 +136,7 @@ h4 {
 
 div#pendingimg {
 	width:96px;
-	height:120px;
+	height:140px;
 }
 
 .ui-bar-a .ui-bar {
@@ -160,6 +160,7 @@ div#pendingimg {
 
 .pendimg {
   height:140px;
+  width:96px;
 }
 
 .imgblock {
