--- a/css/view.css
+++ b/css/view.css
@@ -27,7 +27,8 @@
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
-    font-family: PT Sans Narrow;
+   font-family: PT Sans Narrow; 
+   
 }
 
 
@@ -149,11 +150,13 @@ h4 {
 [data-role="listview"] .time li a:hover {
     background-color: #ffbb00;
     color: #ffffff;
+    font-family: PT Sans Narrow;
 }
 
 [data-role="listview"] .place li a:hover {
     background-color: #88ccc1;
     color: #ffffff;
+    font-family: PT Sans Narrow;
 }
 
 .activitiesImages{
@@ -172,23 +175,27 @@ h4 {
 
 .profilebio h3 {
     color: #cc0000;
+    font-family: PT Sans Narrow;
 }
 
 .profilebio h4 {
     color: #333333;
     font-size: 18px;
+    font-family: PT Sans Narrow;
 }
 
 .preferredLocation {
     float: left;
     margin-left: 10px;
     color: #ffffff;
+    font-family: PT Sans Narrow;
 
 }
 .preferredActivity {
     float: right;
     margin-right: 10px;
     color: #ffffff;
+    font-family: PT Sans Narrow;
 }
 
 .userprofilePic img {
@@ -203,6 +210,7 @@ h4 {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    font-family: PT Sans Narrow;
 
 }
 
@@ -224,18 +232,21 @@ h4 {
     float: left;
     margin-left: 10px;
     color: #ffffff;
+    font-family: PT Sans Narrow;
 
 }
 .preferredActivity {
     float: right;
     margin-right: 10px;
     color: #ffffff;
+    font-family: PT Sans Narrow;
 }
 
 .preferredLocation1 {
     float: left;
     margin-left: 10px;
     color: #cc0000;
+    
 
 }
 .preferredActivity1 {
@@ -266,8 +277,8 @@ h4 {
     text-indent:0px;
     border:1px solid #d02718;
     display:inline-block;
-    font-family:Arial;
-    font-size:15px;
+    font-family: PT Sans Narrow;
+    font-size:17px;
     font-weight:bold;
     font-style:normal;
     height:40px;
@@ -307,8 +318,9 @@ h4 {
 }
 
 fieldset label {
-    height:35px;
+    height:20px;
     margin:0px;
+    width:60px;
 }
 
 .ui-controlgroup, fieldset.ui-controlgroup {
@@ -340,6 +352,20 @@ div#confirm img {
 div#tags label{
     height:20px;
     width:60px;
+}
+
+#myTable, #invites, #login, #logout {
+    background-color: #fff;
+}
+
+#userTop {
+    height:20px;
+    font-size: 13px;
+}
+
+.ui-bar-a {
+     background-color: #fff;
+
 }
 
 /* End of CSS document */
