--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -7,6 +7,10 @@
 *@version 0.1 (2014/09/07)
 */
 
+.activitypanel {
+    padding: 0px !important;
+}
+
 
 [data-role= "header"] h3{
 	color: #ffffff;
@@ -200,6 +204,7 @@ h4 {
 .findpplBtn:hover, .registerBtn:hover, .signinBtn:hover {
 	background-color:#d33021;
 }
+
 .findpplBtn:active, .registerBtn:active, .signinBtn:active {
 	position:relative;
 	top:1px;
@@ -252,6 +257,8 @@ h4 {
     font-family: PT Sans Narrow;
     border-color: #333333;
     text-shadow: none;
+    text-align: center;
+    font-size: 17px;
     
 }
 
@@ -261,6 +268,8 @@ h4 {
     font-family: PT Sans Narrow;
     border-color: #ffbb00;
     text-shadow: none;
+    text-align: center;
+    font-size: 17px;
 }
 
 .place .ui-collapsible-heading .ui-btn {
@@ -269,6 +278,8 @@ h4 {
     font-family: PT Sans Narrow;
     border-color: #88ccc1;
     text-shadow: none;
+    text-align: center;
+    font-size: 17px;
 }
 
 .coffee, .drinks, .dine {
@@ -278,4 +289,13 @@ h4 {
 #myTable, #invites, #login {
     background-color: #fff;
 }
+
+a.activitiesImages.ui-btn {
+	padding: 27px;
+}
+
+div.ui-page.ui-page-theme-a.ui-page-header-fixed.ui-page-active {
+    padding-top: 50px !important;
+}
+
 /* End of CSS document */
