--- a/css/register.css
+++ b/css/register.css
@@ -14,7 +14,7 @@
 	text-shadow: none;
 	font-weight: bold;
 	font-size: 15px;
-        font-family: PT Sans Narrow;
+        font-family: PT Sans;
 }
 
 .ui-header .ui-title {
@@ -24,7 +24,7 @@
     font-size: 17px;
     overflow: visible !important;
     white-space: normal !important;
-    font-family: PT Sans Narrow;
+    font-family: PT Sans;
 }
 
 
@@ -185,7 +185,7 @@ h4 {
 	text-indent:0px;
 	border:1px solid #d02718;
 	display:inline-block;
-	 font-family: PT Sans Narrow;
+	 font-family: PT Sans;
 	font-size:15px;
 	font-weight:bold;
 	font-style:normal;
@@ -219,23 +219,60 @@ h4 {
 
 div[role="main"] input {
 height: 50px;
+font-family: PT Sans;
 }
 
 /* un-checked */
 .ui-checkbox label.ui-checkbox-off {
   background: #333333 !important;
+  height:30px;
+   font-family: PT Sans;
+   font-size: 15px;
+   text-shadow: none;
 }
 
 /* checked */
 .ui-checkbox label.ui-checkbox-on {
   background: #cc0000 !important;
+  height:30px;
+   font-family: PT Sans;
+   font-size: 15px;
+   text-shadow: none;
 }
 
 #myTable, #invites, #login, #logout {
     background-color: #fff;
 }
 
+div.uploadcare-widget-button.uploadcare-widget-button-open {
+    background-color: #cc0000;
+    font-family: PT Sans;
+    width:120px;
+   
+   
+}
 
-
+button#submitRegistrationButton.ui-btn.ui-shadow.ui-corner-all {
+    background: #cc0000;
+    border:1px solid #d02718;
+	display:inline-block;
+	font-family: PT Sans;
+	font-size:20px;
+	font-weight:bold;
+	font-style:normal;
+	height:20px;
+	line-height:20px;
+	width:190px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:1px 1px 0px #810e05;
+	color: #ffffff;
+        height: 50px;
+        
+}
+.ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head+body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head+body .ui-btn.ui-btn-a:visited {
+    font-family: PT Sans;
+    font-size: 17px;
+}
 
 /* End of CSS document */
