--- a/css/login.css
+++ b/css/login.css
@@ -23,10 +23,10 @@
     margin-right: 10%;
     margin-left: 10%;
     margin-bottom: 2%;
-    font-size: 17px;
+    font-size: 15px;
     overflow: visible !important;
     white-space: normal !important;
-    font-family: PT Sans Narrow;
+    font-family: PT Sans, sans-serif;
    
 
 }
